--- a/index.html
+++ b/index.html
@@ -19,8 +19,37 @@
           src="./assets/avatar.png"
           alt="Foto de Cassiano Braz, perfil das redes sociais"
         />
-        <P>@cassano.rimas</P>
+        <p>@cassano.rimas</p>
+      </div>
+      <ul>
+        <li>
+          <a href="#">Inscrever-se no NLW</a>
+        </li>
+        <li>
+          <a href="#">Baixar meu e-book</a>
+        </li>
+        <li>
+          <a href="https://github.com/cassianobraz" target="_blank"
+            >Ver meu portfólio</a
+          >
+        </li>
+        <li>
+          <a href="https://rocketseat.com.br/explorer" target="_blank"
+            >Conheça o explorer</a
+          >
+        </li>
+      </ul>
+      <div id="social-links">
+        
       </div>
     </div>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
