--- a/index.html
+++ b/index.html
@@ -40,7 +40,21 @@
         </li>
       </ul>
       <div id="social-links">
-        
+        <a href="https://github.com/cassianobraz" target="_blank">
+          <ion-icon name="logo-github"></ion-icon>
+        </a>
+        <a href="https://www.instagram.com/cassano.rimas" target="_blank">
+          <ion-icon name="logo-instagram"></ion-icon>
+        </a>
+        <a href="https://www.facebook.com/cassano.pereira" target="_blank">
+          <ion-icon name="logo-facebook"></ion-icon>
+        </a>
+        <a
+          href="https://www.linkedin.com/in/cassiano-pereira-4b39a120b/"
+          target="_blank"
+        >
+          <ion-icon name="logo-linkedin"></ion-icon>
+        </a>
       </div>
     </div>
     <script
