--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" class="light">
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -56,6 +56,10 @@
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </div>
+      <footer>
+        Feito com ❤ pela
+        <a href="https://rocketseat.com.br" target="_blank">rocketseat</a>
+      </footer>
     </div>
     <script
       type="module"
