--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
         />
         <p>@cassano.rimas</p>
       </div>
+
+      <div id="swith">
+        <button>
+        </button>
+        <span></span>
+      </div>
+
       <ul>
         <li>
           <a href="#">Inscrever-se no NLW</a>
