--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="light">
+<html lang="pt-br" class="">
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -9,7 +9,7 @@
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>DevLinks</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -22,9 +22,8 @@
         <p>@cassano.rimas</p>
       </div>
 
-      <div id="swith">
-        <button>
-        </button>
+      <div id="switch">
+        <button></button>
         <span></span>
       </div>
 
